Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,16 +4,16 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-04-16 19:52+0200\n"
-"Last-Translator: Rytis <rytis.s@gmail.com>\n"
+"PO-Revision-Date: 2010-08-19 22:16+0200\n"
+"Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
-"%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.0.1\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
+"100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
 #: libraries/display_tbl.lib.php:415 server_privileges.php:1510
@@ -8680,408 +8680,3 @@ msgstr ""
 #, fuzzy
 msgid "Rename view to"
 msgstr "Pervadinti lentelę į"
-
-#, fuzzy
-#~| msgid "Add AUTO_INCREMENT value"
-#~ msgid "<code>AUTO_INCREMENT</code>"
-#~ msgstr "Pridėti AUTO_INCREMENT reikšmę"
-
-#, fuzzy
-#~| msgid "Dump %s row(s) starting at record # %s"
-#~ msgid "Dump %s row(s) starting at row # %s"
-#~ msgstr "Išvesti %s eilučių pradedant nuo %s eilutės."
-
-#~ msgid "remember template"
-#~ msgstr "atsiminti šabloną"
-
-#~ msgid "\"zipped\""
-#~ msgstr "\"zip\""
-
-#~ msgid "\"gzipped\""
-#~ msgstr "\"gzipped\""
-
-#~ msgid "\"bzipped\""
-#~ msgstr "\"bzip\""
-
-#~ msgid "Imported file compression will be automatically detected from: %s"
-#~ msgstr ""
-#~ "Importuoto failo suspaudimo tipas bus automatiškai nustatytas iš: %s"
-
-#~ msgid "Continued table caption"
-#~ msgstr "Lentelės antraštė (tęsinys)"
-
-#~ msgid "Database export options"
-#~ msgstr "Duombazės eksportavimo parinktys"
-
-#, fuzzy
-#~| msgid "Enclose table and field names with backquotes"
-#~ msgid "Enclose table and column names with backquotes"
-#~ msgstr "Lentelių ir laukų vardams naudoti šias kabutes ` `"
-
-#~ msgid "Add into comments"
-#~ msgstr "Pridėti į komentarus"
-
-#~ msgid "Creation/Update/Check dates"
-#~ msgstr "Sukūrimo/Atnaujinimo/Peržiūros datos"
-
-#~ msgid "Complete inserts"
-#~ msgstr "Visiškas įterpimas"
-
-#~ msgid "Extended inserts"
-#~ msgstr "Išplėstinis įterpimas"
-
-#~ msgid "Use delayed inserts"
-#~ msgstr "Naudoti užlaikytus įterpimus"
-
-#~ msgid "Use ignore inserts"
-#~ msgstr "Ignoruoti INSERT užklausas."
-
-#~ msgid "Export functions"
-#~ msgstr "Eksportuoti funkcijas"
-
-#~ msgid "Export procedures"
-#~ msgstr "Eksportuoti procedūras"
-
-#~ msgid "Export tables"
-#~ msgstr "Eksportuoti lenteles"
-
-#, fuzzy
-#~ msgid "Export triggers"
-#~ msgstr "Eksportuoti lenteles"
-
-#, fuzzy
-#~ msgid "Export views"
-#~ msgstr "Eksportuoti lenteles"
-
-#~ msgid "Actions"
-#~ msgstr "Veiksmai"
-
-#~ msgid "Custom color"
-#~ msgstr "Pasirinkta spalva"
-
-#, fuzzy
-#~| msgid "Table name"
-#~ msgid "Table removal"
-#~ msgstr "Lentelės vardas"
-
-#~ msgid "BLOB Repository"
-#~ msgstr "BLOB saugykla"
-
-#, fuzzy
-#~| msgid "Enabled"
-#~ msgctxt "BLOB repository"
-#~ msgid "Enabled"
-#~ msgstr "Įjungta"
-
-#~ msgid "Disable"
-#~ msgstr "Išjungti"
-
-#~ msgid "Damaged"
-#~ msgstr "Pažeista"
-
-#, fuzzy
-#~| msgid "Repair"
-#~ msgctxt "BLOB repository"
-#~ msgid "Repair"
-#~ msgstr "Taisyti"
-
-#, fuzzy
-#~| msgid "Disabled"
-#~ msgctxt "BLOB repository"
-#~ msgid "Disabled"
-#~ msgstr "Išjungta"
-
-#~ msgid "Enable"
-#~ msgstr "Įjungti"
-
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-#~ msgstr ""
-#~ "Nepavyksta įkelti [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "plėtinio. Patikrinkite PHP nustatymus."
-
-#~ msgid ""
-#~ "Couldn't load the iconv or recode extension needed for charset "
-#~ "conversion. Either configure PHP to enable these extensions or disable "
-#~ "charset conversion in phpMyAdmin."
-#~ msgstr ""
-#~ "Nepavyko užkrauti <em>iconv</em> arba <em>recode</em> plėtinių, "
-#~ "reikalingų koduotės kovertavimui. Suteikite PHP teises naudotis šiais "
-#~ "išplėtimais arba išjunkite phpMyAdmin koduotės konvertavimą. "
-
-#~ msgid ""
-#~ "Couldn't use the iconv, libiconv, or recode_string functions, although "
-#~ "the necessary extensions appear to be loaded. Check your PHP "
-#~ "configuration."
-#~ msgstr ""
-#~ "Kraunant plėtinių pranešimus, nepavyko pasinaudoti <em>iconv</em> arba "
-#~ "<em>libiconv</em> arba <em>recode_string</em> funkcijomis. Pasitkrinkite "
-#~ "PHP parinktis. "
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Įterpti naują laukelį(ius)"
-
-#~ msgid "Field"
-#~ msgstr "Laukas"
-
-#~ msgid "Records"
-#~ msgstr "Viso įrašų:"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Laukų pabaigos žymė"
-
-#~ msgid "Fields"
-#~ msgstr "Lauką"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "Pridėti %s lauką(-us)"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Laukas %s išmestas"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Žr. image/jpeg: vidų"
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Įterpti savo komentarą į header sritį (eilučių skirtukas \\n )"
-
-#~ msgid "and"
-#~ msgstr "ir"
-
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Išjungta"
-
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Įjungta"
-
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Taisyti"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalendorius"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "Suderinamas sy MySQL&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Nepavyko užkrauti nustatymų failo iš \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Sukurti indeksą &nbsp;%s&nbsp;stulpeliui(iams)"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Sukurti lentelę"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Nėra"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Išvalyti lentelę (\"FLUSH\")"
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Paaiškinimas"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Nėra"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Duombazės \"%s\" schema - %s puslapis"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Lentelė \"%s\" neegzistuoja!"
-
-#~ msgid "running on %s"
-#~ msgstr "adresu %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Dydžio matas yra per mažas norint sutalpinti vaizdą viename lape."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Nėra"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Nėra"
-
-#, fuzzy
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Patikrinti duombazės &quot;%s&quot; privilegijas."
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Lentelė \"%s\" neegzistuoja!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Nepavyko užkrauti nustatymų failo iš \"%1$s\""
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Nepavyksta įkelti [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "plėtinio. Patikrinkite PHP nustatymus."
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Nepavyko prisijungti prie MySQL serverio"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Klaidą SQL interpretatoriuje. Prašome patikrinti  ar SQL užklausoje "
-#~ "teisingai naudojamos kabutės. Kita, galima klaida, jog Jūs bandote "
-#~ "atsiųsti dvejetainius (binary) duomenis neapskliaustus kabutėmis. Taip "
-#~ "pat Jūs galite pabandyti įvykdyti savo užklausą iš MySQL konsolės. MySQL "
-#~ "serverio išvesta informacija apie klaidą (jeigu tokių bus) gali padėti "
-#~ "Jums nustatyti klaidos priežastį. Jeigu užklausa sėkmingai įvykdoma "
-#~ "konsolėje, o SQL interpretatorius vistiek išveda pranešimus apie klaidas, "
-#~ "prašome supaprastinite savo SQL užklausą ir perduodamų duomenų kiekį "
-#~ "užklausoje ir praneškite apie klaidą programos kūrėjams su žemiau "
-#~ "pateikiama informacija:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "Duomenys CSV formatu"
-
-#~ msgid "Copy"
-#~ msgstr "Kopijuoti"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "pašalinti vartotojus ir perkrauti privilegijas."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Tai yra švariausias būdas, bet privilegijų perkrovimas gali šiek tiek "
-#~ "užtrukti."
-
-#~ msgid "has been altered."
-#~ msgstr "išplėsta."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer nepalaiko šios funkcijos."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "Kol nėra perkrautos privilegijos, &quot;pašalinti&quot; vartotojai gali "
-#~ "prisijungti prie MySQL darbinės stoties."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "tik pašalinti vartotojus iš privilegijų lentelės."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Leisti vykdyti išsaugotas procedūras; Negalioja šioje MySQL versijoje."
-
-#~ msgid "Process list"
-#~ msgstr "Procesų sąrašas"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Perkrauti privilegijas"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Kol nėra perkrautos privilegijos, vartotojai dar turės privilegiją USAGE."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "MS Excel duomenys"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "Keisti indeksą(-us)"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Pažymėti visus"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Pažymėti visus"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Įterpti"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Atnaujinta"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Trinti"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Sausio0"
-
-#~ msgid "Jan1"
-#~ msgstr "Sausio1"
-
-#~ msgid "Jan2"
-#~ msgstr "Sausio2"
