Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:30+0200\n"
+"PO-Revision-Date: 2010-08-19 22:33+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -597,7 +597,7 @@ msgstr "Lentelės reikšmės %s ištuštintos"
 #: db_structure.php:311 tbl_operations.php:670
 #, php-format
 msgid "View %s has been dropped"
-msgstr "View'as %s buvo panaikintas"
+msgstr "Rodinys (view) %s buvo panaikintas"
 
 #: db_structure.php:311 tbl_operations.php:670
 #, php-format
