--- a/po/lt.po
+++ b/po/lt.po
@@ -622,7 +622,7 @@ msgstr ""
 #: db_structure.php:419 db_structure.php:433 libraries/header.inc.php:128
 #: libraries/tbl_info.inc.php:60 tbl_structure.php:204 test/theme.php:73
 msgid "View"
-msgstr "View'as"
+msgstr "Rodinys (View)"
 
 #: db_structure.php:470 libraries/db_structure.lib.php:40
 #: libraries/server_links.inc.php:69 server_replication.php:31
