--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:42+0200\n"
+"PO-Revision-Date: 2010-08-19 22:48+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1061,10 +1061,9 @@ msgstr "Sekantis"
 
 #. l10n: Display text for current month link in calendar
 #: js/messages.php:83
-#, fuzzy
 #| msgid "Total"
 msgid "Today"
-msgstr "Viso"
+msgstr "Šiandien"
 
 #: js/messages.php:86
 #, fuzzy
