Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:49+0200\n"
+"PO-Revision-Date: 2010-08-19 22:50+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1080,10 +1080,9 @@ msgid "March"
 msgstr "Kovas"
 
 #: js/messages.php:89
-#, fuzzy
 #| msgid "Apr"
 msgid "April"
-msgstr "balandžio"
+msgstr "Balandis"
 
 #: js/messages.php:90
 msgid "May"
