--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:52+0200\n"
+"PO-Revision-Date: 2010-08-19 22:53+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1122,7 +1122,7 @@ msgstr "lapkričio"
 
 #: js/messages.php:97
 msgid "December"
-msgstr ""
+msgstr "gruodžio"
 
 #. l10n: Short month name
 #: js/messages.php:101 libraries/common.lib.php:1568
