--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:53+0200\n"
+"PO-Revision-Date: 2010-08-19 22:54+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1207,7 +1207,7 @@ msgstr "Antradienis"
 
 #: js/messages.php:129
 msgid "Wednesday"
-msgstr ""
+msgstr "Trečiadienis"
 
 #: js/messages.php:130
 msgid "Thursday"
