--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:54+0200\n"
+"PO-Revision-Date: 2010-08-19 22:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1221,7 +1221,7 @@ msgstr "Penktadienis"
 
 #: js/messages.php:132
 msgid "Saturday"
-msgstr ""
+msgstr "Šeštadienis"
 
 #. l10n: Short week day name
 #: js/messages.php:136 libraries/common.lib.php:1593
