Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 22:55+0200\n"
+"PO-Revision-Date: 2010-08-19 22:57+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1586,7 +1586,7 @@ msgstr "Darbinė stotis"
 
 #: libraries/auth/cookie.auth.lib.php:250
 msgid "Username:"
-msgstr "Vartotojo vardas:"
+msgstr "Naudotojo vardas:"
 
 #: libraries/auth/cookie.auth.lib.php:254
 msgid "Password:"
