--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:00+0200\n"
+"PO-Revision-Date: 2010-08-19 23:03+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1955,7 +1955,7 @@ msgstr ""
 
 #: libraries/db_links.inc.php:71
 msgid "Query"
-msgstr "SQL&nbsp;užklausa"
+msgstr "SQL užklausa"
 
 #: libraries/db_links.inc.php:76 libraries/relation.lib.php:133
 msgid "Designer"
