--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:03+0200\n"
+"PO-Revision-Date: 2010-08-19 23:04+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1979,7 +1979,7 @@ msgstr ""
 
 #: libraries/db_routines.inc.php:42
 msgid "Return type"
-msgstr ""
+msgstr "Gražinimo tipas"
 
 #: libraries/db_structure.lib.php:48 libraries/display_tbl.lib.php:1806
 msgid ""
