--- a/po/lt.po
+++ b/po/lt.po
@@ -783,9 +783,8 @@ msgid "Track table"
 msgstr "Patikrinti lentelę"
 
 #: db_tracking.php:195
-#, fuzzy
 msgid "Database Log"
-msgstr "Duombazė"
+msgstr "Duombazės žurnalas"
 
 #: enum_editor.php:21 libraries/tbl_properties.inc.php:798
 #, php-format
