--- a/po/lt.po
+++ b/po/lt.po
@@ -2121,10 +2121,9 @@ msgid "Table(s):"
 msgstr "Lentelė(s):"
 
 #: libraries/display_export.lib.php:149
-#, fuzzy
 #| msgid "Rows"
 msgid "Rows:"
-msgstr "Eilutės"
+msgstr "Eilutės:"
 
 #: libraries/display_export.lib.php:157
 #, fuzzy
